更改标题为'文字的力量'

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     <!-- 英雄区域 -->
     <section class="hero" id="home">
         <div class="container">
-            <h1>文学中的励志力量</h1>
+            <h1>文字的力量</h1>
             <p>从经典文学作品中汲取智慧与力量，让文字点亮前行的道路</p>
         </div>
     </section>
