删除左上角'文学励志语录'文本，将多处'励志语录'改为'语录'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文学励志语录</title>
+    <title>文字的力量</title>
     <style>
         * {
             margin: 0;
@@ -284,10 +284,10 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">文学励志语录</div>
+                <div class="logo"></div>
                 <ul class="nav-links">
                     <li><a href="#home">首页</a></li>
-                    <li><a href="#quotes">励志语录</a></li>
+                    <li><a href="#quotes">语录</a></li>
                     <li><a href="#books">推荐书籍</a></li>
                     <li><a href="#about">关于我们</a></li>
                 </ul>
@@ -303,10 +303,10 @@
         </div>
     </section>
 
-    <!-- 励志语录区域 -->
+    <!-- 语录区域 -->
     <section class="quotes-section" id="quotes">
         <div class="container">
-            <h2 class="section-title">励志语录精选</h2>
+            <h2 class="section-title">语录精选</h2>
             <div class="quotes-grid">
                 <!-- 语录卡片1 -->
                 <div class="quote-card">
@@ -405,7 +405,7 @@
     <footer id="about">
         <div class="container">
             <div class="footer-content">
-                <h3>文学励志语录</h3>
+                <h3>文学语录</h3>
                 <p>收集经典文学作品中的智慧箴言，为生活注入力量</p>
                 <ul class="footer-links">
                     <li><a href="#home">首页</a></li>
@@ -413,7 +413,7 @@
                     <li><a href="#books">书籍</a></li>
                     <li><a href="#about">关于</a></li>
                 </ul>
-                <p class="copyright">© 2023 文学励志语录 | 设计灵感来源于经典文学作品</p>
+                <p class="copyright">© 2023 文字的力量 | 设计灵感来源于经典文学作品</p>
             </div>
         </div>
     </footer>
